fix alignment of read more on front page and move arrows to top

--- a/wp-content/themes/mesmerize/backup-custom-js-css/theme-overrides.css
+++ b/wp-content/themes/mesmerize/backup-custom-js-css/theme-overrides.css
@@ -105,6 +105,10 @@ ul.dropdown-menu.active-line-bottom > li:not(.current-menu-item):not(.current_pa
   font-size: 0.75rem;
 }
 
+.read-more:after {
+  top: 0;
+}
+
 #latest-news-1 .read-more:hover {
   color: #d2b25b;
 }
